--- a/lesson01/index.html
+++ b/lesson01/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>    
     <form id="form">  
-    <div class="cats"></div>
+    <div class="cats">
         <label> How many cats do you have?
             <input id="cats" type="number" class="input">
         </label>
@@ -20,13 +20,13 @@
         </label>
     </div>
         <!-- <input id="dogs" type="submit" value="WOOF">-->
-    <div class="birds"></div>
+    <div class="birds">
         <label> How many birds do you have?
             <input id="birds" class="birds" type="number" class="input">
         </label>
     </div>   
         <!-- <input type="submit" value="CHIRP">-->
-    <div class="bugs"></div>
+    <div class="bugs">
         <label> How many bugs do you have?
             <input id="bugs" class="bugs" type="number" class="input">
         </label>
