--- a/lesson06/assignment/contact.html
+++ b/lesson06/assignment/contact.html
@@ -28,7 +28,7 @@
                     </li>
                     <!-- Tooltip-->
                     <li class="nav-item">
-                      <a class="nav-link" href="team.hmlt" data-toggle="tooltip" data-placement="bottom" title="See Our Team"> Team</a>
+                      <a class="nav-link" href="team.html" data-toggle="tooltip" data-placement="bottom" title="See Our Team"> Team</a>
                     </li>
                     <!-- Tooltip-->
                     <li class="nav-item">
