--- a/lesson06/assignment/contact.html
+++ b/lesson06/assignment/contact.html
@@ -51,7 +51,7 @@
             <!-- Grid Container-->
             <div class="container">
               <div class="row">
-                <div class="col-6 p-5">
+                <div class="col-xl-6 p-5">
                   <h2 class="pb-3"> Email </h2>
                   <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     Aenean tempus ligula ac elit porta, nec ornare mauris bibendum.
@@ -59,7 +59,7 @@
                     Curabitur sit amet eros semper mauris ultricies consequat ut et ante.
                     Morbi pellentesque dolor ac orci ultrices, eu sagittis eros dignissim.</p>
                 </div>
-                <div class="col-6 p-5">
+                <div class="col-xl-6 p-5">
                   <h2 class="pb-3"> Phone </h2>
                   <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     Aenean tempus ligula ac elit porta, nec ornare mauris bibendum.
@@ -69,7 +69,7 @@
                 </div>
               </div>
               <div class="row">
-                <div class="col-6 p-5">
+                <div class="col-lg-6 p-5">
                   <h2 class="pb-3"> Address  </h2>
                   <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     Aenean tempus ligula ac elit porta, nec ornare mauris bibendum.
@@ -77,7 +77,7 @@
                     Curabitur sit amet eros semper mauris ultricies consequat ut et ante.
                     Morbi pellentesque dolor ac orci ultrices, eu sagittis eros dignissim.</p>
                 </div>
-                <div class="col-6 p-5">
+                <div class="col-sm-6 p-5">
                   <h2 class="pb-3"> Messenger Pigeon </h2>
                   <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     Aenean tempus ligula ac elit porta, nec ornare mauris bibendum.
@@ -128,7 +128,7 @@
                         </div>
                       </div>
                     </section>
-                    <hr class="my-5" />
+                    <hr class="my-5"/>
                   </div>
                   </footer>
 
