--- a/lesson06/assignment/index.html
+++ b/lesson06/assignment/index.html
@@ -16,39 +16,45 @@
             <header> 
                 <h1 class="text-center text-capitalize m-5"> Law Offices of Yema Measho </h1>
               </header>
-
               <!-- Navigation Bar -->
-              <nav class="navbar navbar-expand-lg navbar navbar-light justify-content-center" style="background-color: #e3f2fd;">
-                <div class="collapse navbar-collapse" id="navbar">
-                  <ul class="navbar-nav p-4 align-middle">
-                    <li class="nav-item active">
-                      <!-- Tooltip-->
-                      <a class="nav-link" href="index.html" data-toggle="tooltip" data-placement="bottom" title="Back to Homepage">Home </a>
-                    </li>
-                      <!-- Tooltip-->
-                    <li class="nav-item">
-                      <a class="nav-link" href="Team.html" data-toggle="tooltip" data-placement="bottom" title="See Our Team"> Team</a>
-                    </li>
-                      <!-- Tooltip-->
-                    <li class="nav-item">
-                      <a class="nav-link" href="AboutUs.html" data-toggle="tooltip" data-placement="bottom" title="Learn More About Our Firm"> About Us</a>
-                    </li>
-                      <!-- Tooltip-->
-                    <li class="nav-item">
-                      <a class="nav-link" href="contact.html" data-toggle="tooltip" data-placement="bottom" title="Contact Information">Contact</a>
-                    </li>
-                      <!-- Tooltip-->
-                    <li class="nav-item">
-                      <a class="nav-link" href="#">Location</a>
-                    </li>
-                  </ul>
+              <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
+                <div class="container-fluid">
+                  <a class="navbar-brand" href="#">Navbar</a>
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav p-4 align-middle">
+                      <li class="nav-item">
+                        <!-- Tooltip-->
+                        <a class="nav-link active" aria-current="page" href="index.html" data-toggle="tooltip" data-placement="bottom" title="Back to Homepage">Home</a>
+                      </li>
+                      <!-- Tooltip -->
+                      <li class="nav-item">
+                        <a class="nav-link" href="Team.html" data-toggle="tooltip" data-placement="bottom" title="See Our Team">Team</a>
+                      </li>
+                      <!-- Tooltip -->
+                      <li class="nav-item">
+                        <a class="nav-link" href="AboutUs.html" data-toggle="tooltip" data-placement="bottom" title="Learn More About Our Firm"f>About Us</a>
+                      </li>
+                      <!-- Tooltip -->
+                      <li class="nav-item">
+                        <a class="nav-link" href="contact.html"  data-toggle="tooltip" data-placement="bottom" title="Contact Information">Contact</a>
+                      </li>
+                      <!-- Tooltip -->
+                      <li class="nav-item">
+                        <a class="nav-link" href="#" data-toggle="tooltip" data-placement="bottom" title="Unavaiable">Location</a>
+                      </li>
+                    </ul>
+                  </div>
                 </div>
               </nav>
-            
+
             <!-- Main Content-->
             <div class="container-fluid">
               <div class="row">
-                <div class="col-4">
+                <!-- Lesson 6 Assignment Correction-->
+                <div class="col-lg-4 col-sm-12">
                 <aside>
                   <h2 class="mt-5 mb-4"> Sidebar 1</h2>
                   <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla malesuada ultricies tincidunt. Ut id risus ultricies, viverra ex in, sagittis urna. Aenean odio dolor, blandit sed metus et, maximus mollis dolor. Fusce quis hendrerit nisi, a aliquet eros. Praesent molestie, mi quis placerat eleifend, velit felis fringilla ex, eget consectetur ligula sem quis quam. Sed libero leo, sagittis quis sapien id, ullamcorper facilisis massa. Sed condimentum magna at laoreet mollis. Vestibulum ultrices elementum imperdiet. Morbi viverra nisl sed lectus elementum, eu imperdiet nunc egestas. Quisque eget mollis risus. Pellentesque leo nisi, consequat hendrerit elit vitae, varius commodo quam.</p>
@@ -56,7 +62,8 @@
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla malesuada ultricies tincidunt. Ut id risus ultricies, viverra ex in, sagittis urna. Aenean odio dolor, blandit sed metus et, maximus mollis dolor. Fusce quis hendrerit nisi, a aliquet eros. Praesent molestie, mi quis placerat eleifend, velit felis fringilla ex, eget consectetur ligula sem quis quam. Sed libero leo, sagittis quis sapien id, ullamcorper facilisis massa. Sed condimentum magna at laoreet mollis. Vestibulum ultrices elementum imperdiet. Morbi viverra nisl sed lectus elementum, eu imperdiet nunc egestas. Quisque eget mollis risus. Pellentesque leo nisi, consequat hendrerit elit vitae, varius commodo quam.
                 </aside>
                 </div>
-                <div class="col-8">
+                <!-- Lesson 6 Assignment Correction  col-lg-8 col-sm-12-->
+                <div class="col-lg-8 col-sm-12">
                   <section> 
                   <h2 class="mt-5 mb-4"> Main Section</h2>
                   <img src="#"" alt="image of a lawyer working">
