Lesson 6 Assignment redo

--- a/lesson06/assignment/Team.html
+++ b/lesson06/assignment/Team.html
@@ -18,35 +18,37 @@
                 <h1 class="text-center text-capitalize m-5"> Law Offices of Yema Measho </h1>
             </header>
             <!-- Navigation Bar -->
-              <nav class="navbar navbar-expand-lg navbar navbar-light justify-content-center" style="background-color: #e3f2fd;">
-                </button>
-                <div class="collapse navbar-collapse" id="navbar">
-                  <ul class="navbar-nav p-4 align-middle">
-                    <!-- Tooltip-->
-                    <li class="nav-item active">
-                      <a class="nav-link" href="index.html" data-toggle="tooltip" data-placement="bottom" title="Back to Homepage">Home </a>
-                    </li>
-                    <!-- Tooltip-->
-                    <li class="nav-item">
-                      <a class="nav-link" href="Team.html" data-toggle="tooltip" data-placement="bottom" title="See Our Team"> Team</a>
-                    </li>
-                    <!-- Tooltip-->
-                    <li class="nav-item">
-                      <a class="nav-link" href="AboutUs.html" data-toggle="tooltip" data-placement="bottom" title="Learn More About Our Firm">About Us</a>
-                    </li>
-                    <!-- Tooltip-->
-                    <li class="nav-item">
-                      <a class="nav-link" href="contact.html" data-toggle="tooltip" data-placement="bottom" title="Contact Information">Contact</a>
-                    </li>
-                    <!-- Tooltip-->
-                    <li class="nav-item">
-                      <a class="nav-link" href="#">Location</a>
-                    </li>
-                  </ul>
+            <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
+                <div class="container-fluid">
+                  <a class="navbar-brand" href="#">Navbar</a>
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav p-4 align-middle">
+                      <li class="nav-item">
+                        <!-- Tooltip-->
+                        <a class="nav-link active" aria-current="page" href="index.html" data-toggle="tooltip" data-placement="bottom" title="Back to Homepage">Home</a>
+                      </li>
+                      <!-- Tooltip -->
+                      <li class="nav-item">
+                        <a class="nav-link" href="Team.html" data-toggle="tooltip" data-placement="bottom" title="See Our Team">Team</a>
+                      </li>
+                      <!-- Tooltip -->
+                      <li class="nav-item">
+                        <a class="nav-link" href="AboutUs.html" data-toggle="tooltip" data-placement="bottom" title="Learn More About Our Firm"f>About Us</a>
+                      </li>
+                      <!-- Tooltip -->
+                      <li class="nav-item">
+                        <a class="nav-link" href="contact.html"  data-toggle="tooltip" data-placement="bottom" title="Contact Information">Contact</a>
+                      </li>
+                      <!-- Tooltip -->
+                      <li class="nav-item">
+                        <a class="nav-link" href="#" data-toggle="tooltip" data-placement="bottom" title="Unavaiable">Location</a>
+                      </li>
+                    </ul>
+                  </div>
                 </div>
-
-                  
-                  
               </nav>
             <!-- Image Container -->
             <div class="container-fluid">
@@ -55,7 +57,7 @@
                 <div class="col-6">
                     <!-- Image 1 -->
                     <div class="image1 p-5">
-                        <img src="./images/image2.jpg" alt="image of a lawyer" class="img-fluid img-thumbnail img-responsive">
+                        <img src="/images/image2.jpg" alt="image of a lawyer" class="img-fluid img-thumbnail img-responsive">
                         <div class="image1_text mt-5">
                         <h2> Lawyer 2 </h2>
                             <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. In eget consequat justo. In quis ex velit. Ut ullamcorper venenatis tincidunt. Donec tempus turpis turpis, lobortis elementum turpis scelerisque sed. In suscipit iaculis tellus sed pellentesque. Praesent vulputate, est nec porttitor mattis, enim eros pretium nunc, vitae dictum erat mauris sit amet eros. In gravida ipsum vel nibh hendrerit venenatis. Maecenas venenatis sem odio, vel condimentum nisl egestas ut. Curabitur consequat ac est eu vestibulum. Nullam posuere ex turpis, vel iaculis lectus euismod in. Cras dignissim sapien risus, ut euismod odio commodo a. Suspendisse non purus erat. Sed et porttitor magna, vitae pellentesque turpis. Phasellus et velit bibendum, fringilla nibh eu, mattis velit. Vivamus fringilla orci quis ligula porttitor, sit amet viverra arcu feugiat. Nam dapibus id nibh at tristique.</p>
@@ -67,7 +69,7 @@
                     <div class="col-6">
                         <!-- Image 2 -->
                         <div class="image2 p-5">
-                            <img src="./images/image3.jpg" alt="image of a lawyer" class="img-fluid img-thumbnail img-responsive">
+                            <img src="/images/image3.jpg" alt="image of a lawyer" class="img-fluid img-thumbnail img-responsive">
                             <div class="image2_text mt-5">
                                 <h2> Lawyer 3 </h2>
                                 <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. In eget consequat justo. In quis ex velit. Ut ullamcorper venenatis tincidunt. Donec tempus turpis turpis, lobortis elementum turpis scelerisque sed. In suscipit iaculis tellus sed pellentesque. Praesent vulputate, est nec porttitor mattis, enim eros pretium nunc, vitae dictum erat mauris sit amet eros. In gravida ipsum vel nibh hendrerit venenatis. Maecenas venenatis sem odio, vel condimentum nisl egestas ut. Curabitur consequat ac est eu vestibulum. Nullam posuere ex turpis, vel iaculis lectus euismod in. Cras dignissim sapien risus, ut euismod odio commodo a. Suspendisse non purus erat. Sed et porttitor magna, vitae pellentesque turpis. Phasellus et velit bibendum, fringilla nibh eu, mattis velit. Vivamus fringilla orci quis ligula porttitor, sit amet viverra arcu feugiat. Nam dapibus id nibh at tristique.</p>
@@ -78,7 +80,7 @@
                     <div class="col-6">
                         <!-- Image 3-->
                         <div class="image3 p-5">
-                            <img src="./images/image4.jpg" alt="image of a lawyer" class="img-fluid img-thumbnail img-responsive">
+                            <img src="/images/image4.jpg" alt="image of a lawyer" class="img-fluid img-thumbnail img-responsive">
                             <div class="image3 p-5">
                                 <h2> Lawyer 4</h2>
                                 <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. In eget consequat justo. In quis ex velit. Ut ullamcorper venenatis tincidunt. Donec tempus turpis turpis, lobortis elementum turpis scelerisque sed. In suscipit iaculis tellus sed pellentesque. Praesent vulputate, est nec porttitor mattis, enim eros pretium nunc, vitae dictum erat mauris sit amet eros. In gravida ipsum vel nibh hendrerit venenatis. Maecenas venenatis sem odio, vel condimentum nisl egestas ut. Curabitur consequat ac est eu vestibulum. Nullam posuere ex turpis, vel iaculis lectus euismod in. Cras dignissim sapien risus, ut euismod odio commodo a. Suspendisse non purus erat. Sed et porttitor magna, vitae pellentesque turpis. Phasellus et velit bibendum, fringilla nibh eu, mattis velit. Vivamus fringilla orci quis ligula porttitor, sit amet viverra arcu feugiat. Nam dapibus id nibh at tristique.</p>
