--- a/lesson06/assignment/contact.html
+++ b/lesson06/assignment/contact.html
@@ -18,35 +18,37 @@
                 <h1 class="text-center text-capitalize m-5"> Law Offices of Yema Measho </h1>
               </header>
               <!-- Navigation Bar -->
-              <nav class="navbar navbar-expand-lg navbar navbar-light justify-content-center" style="background-color: #e3f2fd;">
-                </button>
-                <div class="collapse navbar-collapse" id="navbar">
-                  <ul class="navbar-nav p-4 align-middle">
-                    <!-- Tooltip-->
-                    <li class="nav-item active">
-                      <a class="nav-link" href="index.html"  data-toggle="tooltip" data-placement="bottom" title="Back to Homepage">Home</a>
-                    </li>
-                    <!-- Tooltip-->
-                    <li class="nav-item">
-                      <a class="nav-link" href="team.html" data-toggle="tooltip" data-placement="bottom" title="See Our Team"> Team</a>
-                    </li>
-                    <!-- Tooltip-->
-                    <li class="nav-item">
-                      <a class="nav-link" href="AboutUs.html" data-toggle="tooltip" data-placement="bottom" title="Learn More About Our Firm">About Us</a>
-                    </li>
-                    <!-- Tooltip-->
-                    <li class="nav-item">
-                      <a class="nav-link" href="contact.html" data-toggle="tooltip" data-placement="bottom" title="Contact Information">Contact</a>
-                    </li>
-                    <!-- Tooltip-->
-                    <li class="nav-item">
-                      <a class="nav-link" href="#">Location</a>
-                    </li>
-                  </ul>
+              <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
+                <div class="container-fluid">
+                  <a class="navbar-brand" href="#">Navbar</a>
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav p-4 align-middle">
+                      <li class="nav-item">
+                        <!-- Tooltip-->
+                        <a class="nav-link active" aria-current="page" href="index.html" data-toggle="tooltip" data-placement="bottom" title="Back to Homepage">Home</a>
+                      </li>
+                      <!-- Tooltip -->
+                      <li class="nav-item">
+                        <a class="nav-link" href="Team.html" data-toggle="tooltip" data-placement="bottom" title="See Our Team">Team</a>
+                      </li>
+                      <!-- Tooltip -->
+                      <li class="nav-item">
+                        <a class="nav-link" href="AboutUs.html" data-toggle="tooltip" data-placement="bottom" title="Learn More About Our Firm"f>About Us</a>
+                      </li>
+                      <!-- Tooltip -->
+                      <li class="nav-item">
+                        <a class="nav-link" href="contact.html"  data-toggle="tooltip" data-placement="bottom" title="Contact Information">Contact</a>
+                      </li>
+                      <!-- Tooltip -->
+                      <li class="nav-item">
+                        <a class="nav-link" href="#" data-toggle="tooltip" data-placement="bottom" title="Unavaiable">Location</a>
+                      </li>
+                    </ul>
+                  </div>
                 </div>
-
-                  
-                  
               </nav>
             <!-- Grid Container-->
             <div class="container">
@@ -128,7 +130,7 @@
                         </div>
                       </div>
                     </section>
-                    <hr class="my-5" />
+                    <hr class="my-5"/>
                   </div>
                   </footer>
 
