Lesson 6 Assignment redo

--- a/lesson06/assignment/Team.html
+++ b/lesson06/assignment/Team.html
@@ -57,7 +57,7 @@
                 <div class="col-6">
                     <!-- Image 1 -->
                     <div class="image1 p-5">
-                        <img src="/images/image2.jpg" alt="image of a lawyer" class="img-fluid img-thumbnail img-responsive">
+                        <img src="./images/image2.jpg" alt="image of a lawyer" class="img-fluid img-thumbnail img-responsive">
                         <div class="image1_text mt-5">
                         <h2> Lawyer 2 </h2>
                             <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. In eget consequat justo. In quis ex velit. Ut ullamcorper venenatis tincidunt. Donec tempus turpis turpis, lobortis elementum turpis scelerisque sed. In suscipit iaculis tellus sed pellentesque. Praesent vulputate, est nec porttitor mattis, enim eros pretium nunc, vitae dictum erat mauris sit amet eros. In gravida ipsum vel nibh hendrerit venenatis. Maecenas venenatis sem odio, vel condimentum nisl egestas ut. Curabitur consequat ac est eu vestibulum. Nullam posuere ex turpis, vel iaculis lectus euismod in. Cras dignissim sapien risus, ut euismod odio commodo a. Suspendisse non purus erat. Sed et porttitor magna, vitae pellentesque turpis. Phasellus et velit bibendum, fringilla nibh eu, mattis velit. Vivamus fringilla orci quis ligula porttitor, sit amet viverra arcu feugiat. Nam dapibus id nibh at tristique.</p>
@@ -69,7 +69,7 @@
                     <div class="col-6">
                         <!-- Image 2 -->
                         <div class="image2 p-5">
-                            <img src="/images/image3.jpg" alt="image of a lawyer" class="img-fluid img-thumbnail img-responsive">
+                            <img src="./images/image3.jpg" alt="image of a lawyer" class="img-fluid img-thumbnail img-responsive">
                             <div class="image2_text mt-5">
                                 <h2> Lawyer 3 </h2>
                                 <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. In eget consequat justo. In quis ex velit. Ut ullamcorper venenatis tincidunt. Donec tempus turpis turpis, lobortis elementum turpis scelerisque sed. In suscipit iaculis tellus sed pellentesque. Praesent vulputate, est nec porttitor mattis, enim eros pretium nunc, vitae dictum erat mauris sit amet eros. In gravida ipsum vel nibh hendrerit venenatis. Maecenas venenatis sem odio, vel condimentum nisl egestas ut. Curabitur consequat ac est eu vestibulum. Nullam posuere ex turpis, vel iaculis lectus euismod in. Cras dignissim sapien risus, ut euismod odio commodo a. Suspendisse non purus erat. Sed et porttitor magna, vitae pellentesque turpis. Phasellus et velit bibendum, fringilla nibh eu, mattis velit. Vivamus fringilla orci quis ligula porttitor, sit amet viverra arcu feugiat. Nam dapibus id nibh at tristique.</p>
@@ -80,7 +80,7 @@
                     <div class="col-6">
                         <!-- Image 3-->
                         <div class="image3 p-5">
-                            <img src="/images/image4.jpg" alt="image of a lawyer" class="img-fluid img-thumbnail img-responsive">
+                            <img src="./images/image4.jpg" alt="image of a lawyer" class="img-fluid img-thumbnail img-responsive">
                             <div class="image3 p-5">
                                 <h2> Lawyer 4</h2>
                                 <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. In eget consequat justo. In quis ex velit. Ut ullamcorper venenatis tincidunt. Donec tempus turpis turpis, lobortis elementum turpis scelerisque sed. In suscipit iaculis tellus sed pellentesque. Praesent vulputate, est nec porttitor mattis, enim eros pretium nunc, vitae dictum erat mauris sit amet eros. In gravida ipsum vel nibh hendrerit venenatis. Maecenas venenatis sem odio, vel condimentum nisl egestas ut. Curabitur consequat ac est eu vestibulum. Nullam posuere ex turpis, vel iaculis lectus euismod in. Cras dignissim sapien risus, ut euismod odio commodo a. Suspendisse non purus erat. Sed et porttitor magna, vitae pellentesque turpis. Phasellus et velit bibendum, fringilla nibh eu, mattis velit. Vivamus fringilla orci quis ligula porttitor, sit amet viverra arcu feugiat. Nam dapibus id nibh at tristique.</p>
